# parking-management

./: README.md
clients/Client_for_Linux/VIPClient/inc/: VIPClient.h
clients/Client_for_Linux/VIPClient/src/: VIPClient.cpp
clients/Client_for_Windows/EClient/inc/: EClient.h
clients/Client_for_Windows/EClient/src/: EClient.cpp
clients/EClient/inc/: EClient.h
clients/EClient/src/: EClient.cpp  main.cpp
clients/adClient/AD/: AD  AD.pro  GIF.qrc  Makefile  main.cpp  moc_widget.cpp  qrc_GIF.cpp  ui_widget.h  widget.cpp  widget.h  widget.ui
clients/adClient/ADclient/: advertising.pro  image.rc  photo.qrc
clients/adClient/ADclient/inc/: EClient.h  add.h  alter.h  alter1.h  dele.h  dele1.h  log_in.h  look.h  mainwindow.h
clients/adClient/ADclient/src/: EClient.cpp  (+9 more)
clients/employeeClient/: .qmake.stash  EClient.cpp  EClient.h  TcpClient.cpp  addstaffwindow.cpp  addstaffwindow.h  addwindow.cpp  addwindow.h  addwindow.ui  alterwindow.cpp  alterwindow.h  alterwindow.ui  findwindow.cpp  findwindow.h  findwindow.ui  initialwindow.cpp  initialwindow.h  initialwindow.ui  logMain  mainwindow.cpp  mainwindow.h  mainwindow.ui  photo.qrc  rolltext.cpp  rolltext.h
clients/mployeeClient/: Makefile  TcpClient.h  addwindow.cpp  addwindow.ui  alterwindow.cpp  armqt.sh  logMain.pro  main.cpp
clients/park_manager/parking_lot3/: EClient.cpp  EClient.h  Makefile  Parking_lot3.pro  TcpClient.h  inputwindow.cpp  inputwindow.h  inputwindow.ui  keybutten.cpp  keybutton.cpp  keybutton.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_inputwindow.cpp  moc_mainwindow.cpp  parking_lot3  root@192.168.1.83  ui_inputwindow.h  ui_mainwindow.h
clients/park_manager/porking_port/: .qmake.stash  Makefile  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  porking_port  ui_mainwindow.h
clients/vipClient/: .qmake.stash  EClient.cpp  EClient.h  Makefile  keygood.cpp  keygood.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_EClient.cpp  moc_mainwindow.cpp  moc_mykeyboard.cpp  moc_mykeyboard2.cpp  moc_user2vip.cpp  mykeyboard.cpp  mykeyboard.h  mykeyboard.ui  mykeyboard2.cpp  mykeyboard2.h  mykeyboard2.ui  project4  project4.pro  qrc_res.cpp  res.qrc  ui_mainwindow.h  ui_mykeyboard.h  ui_mykeyboard2.h  ui_user2vip.h  user2vip.cpp  user2vip.h  user2vip.ui
server/: CMakeLists.txt  MyProject  parkingManagementDb.db
server/db/controller/: EmployeeInformationFormationController.cpp  EmployeeInformationFormationController.h  VIPInformationController.cpp  VIPInformationController.h  adInfomationFormationController.cpp  adInfomationFormationController.h  parkingRecordFormationController.cpp  parkingRecordFormationController.h
server/db/model/: EmployeeInformationFormation.cpp  EmployeeInformationFormation.h  EmployeeInformationFormationDAO.cpp  EmployeeInformationFormationDAO.h  VIPInformation.cpp  VIPInformation.h  VIPInformationDAO.cpp  VIPInformationDAO.h  ad_information_formation.cpp  ad_information_formation.h  ad_information_formationDAO.cpp  ad_information_formationDAO.h  parkingManagementDb.db  parkingRecordFormation.cpp  parkingRecordFormation.h  parkingRecordFormationDAO.cpp  parkingRecordFormationDAO.h
server/db/test/: CMakeCache.txt  Makefile  MyProject  cmake_install.cmake  main.cpp  parkingManagementDb.db
server/inc/: Client.h  ClientManager.h  Epoll.h  ParkingServer.h  TcpServer.h  base64.h  log.h
server/src/: Client.cpp  ClientManager.cpp  Epoll.cpp  ParkingServer.cpp  TcpServer.cpp  base64.cpp  log.c  main.cpp
(+8 files in other folders)
